namespace _67Bet.Betting.Domain.Enums;

public enum EventStatus
{
    Scheduled,
    Live,
    Finished,
    Cancelled
}

public enum TicketStatus
{
    Pending,
    Won,
    Lost,
    Cancelled
}

public enum BetStatus
{
    Pending,
    Won,
    Lost
}
